# mysk-club-registrar-api

./: .example.env  .gitignore  Cargo.toml  Dockerfile  README.md  bash.sh
src/: main.rs
src/database/: tables.dsql  types.ts
src/routes/: health.rs  index.rs  mod.rs  test_auth.rs
src/routes/clubs/: club_contact.rs  club_detail.rs  club_join_request.rs  club_join_request_detail.rs  clubs.rs  join_club.rs  mod.rs
src/structs/: auth.rs  classroom.rs  club_request.rs  clubs.rs  common.rs  contacts.rs  health.rs  mod.rs  student.rs
src/utils/: date.rs  logger.rs  memory.rs  mod.rs
