[package]
name = "mysk_club_registrar_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
# cfg-if = "1.0"
# sysinfo = "0.14"
# winapi = { version = "0.3", features = ["winnt", "psapi"] } # for Windows
sqlx = { version = "0.6.3", default-features = false, features = ["postgres", "uuid", "chrono", "json", "runtime-async-std-native-tls"] }
anyhow = "1.0"
dotenv = "0.15.0"
