[package]
name = "mysk_club_registrar_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
sqlx = { version = "0.6.3", default-features = false, features = ["postgres", "uuid", "chrono", "json", "runtime-async-std-native-tls"] }
anyhow = "1.0"
dotenv = "0.15.0"
actix-web = "4.3.1"
actix-cors = "0.6.4"
env_logger = "0.10.0"
uuid = { version = "1.3.3", features = ["serde", "v4"] }
