[package]
name = "mysk_club_registrar_api"
version = "0.1.0"
edition = "2021"

[scripts]
dev = "cargo watch -q -c -w src/ -x run"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
sqlx = { version = "0.6.3", default-features = false, features = ["postgres", "uuid", "chrono", "json", "runtime-async-std-native-tls", "macros"] }
anyhow = "1.0"
dotenv = "0.15.0"
actix-web = "4.3.1"
actix-rt = "2.4.0"
actix-cors = "0.6.4"
env_logger = "0.10.0"
uuid = { version = "1.3.3", features = ["serde", "v4"] }
base64 = "0.21.2"
jsonwebtoken = "8.3.0"
async-trait = "0.1.51"
futures = "0.3.17"
derive_more = "0.99.11"
log= "0.4.14"
colored = "2.0.0"


